--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
+    "scripts": {
+  "build": "echo 'skip build'"
+}
   }
 }
