--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "build": "echo 'skip build'"
+  },
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
-    "scripts": {
-  "build": "echo 'skip build'"
-}
   }
 }
