--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "cors": "^2.8.5",
+    "busboy": "^1.6.0",
     "csv-parse": "^5.6.0",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "multer": "^2.0.1"
   }
 }
