--- a/client/package.json
+++ b/client/package.json
@@ -2,17 +2,19 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "csv-parse": "^5.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+　"dependencies": {
+ 　 "@testing-library/dom": "^10.4.0",
+ 　 "@testing-library/jest-dom": "^6.6.3",
+　  "@testing-library/react": "^16.3.0",
+ 　 "@testing-library/user-event": "^13.5.0",
+ 　 "axios": "^1.6.7",
+ 　 "csv-parse": "^5.6.0",
+ 　 "formidable": "^3.7.0",
+　  "react": "^19.1.0",
+ 　 "react-dom": "^19.1.0",
+　  "react-scripts": "5.0.1",
+　  "web-vitals": "^2.1.4"
+},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
