--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "csv-parse": "^5.6.0",
+    "csv-parser": "^3.2.0",
     "formidable": "^3.5.4",
     "next": "^15.3.5",
     "react": "^19.1.0",
@@ -43,5 +44,8 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.57.1"
+  }
 }
