--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-vega": "^7.7.1",
+    "vega": "^5.27.0",
+    "vega-lite": "^5.14.0",
+    "vega-embed": "^6.22.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
